--- a/assets/package.json
+++ b/assets/package.json
@@ -14,6 +14,7 @@
     "brunch": "2.10.9",
     "clean-css-brunch": "2.10.0",
     "jquery": "^3.3.1",
+    "sass-brunch": "^2.10.4",
     "uglify-js-brunch": "2.10.0"
   }
 }
